# django-ty

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
compatibility/: differential-conformance.json  django-stubs-6.0.6.toml
conformance/: candidate-requirements.txt  mypy.ini  pyproject.toml  reference-requirements.txt
conformance/cases/: extras.py  lookups.py  managers_querysets.py  models_fields.py  relations.py  settings_metadata.py
conformance/conformance_models/: apps.py  models.py
conformance/conformance_project/: settings.py
docs/: DJANGO-STUBS-COVERAGE.md
e2e/django5_fixture/: README.md  settings.py
e2e/django5_fixture/.ty/plugins/: django-ty.plugin.json
e2e/django5_fixture/.ty/plugins/stubs/django/db/models/: __init__.pyi  manager.pyi  query.pyi
e2e/django5_fixture/accounts/: models.py
e2e/django5_fixture/auditlog/: models.py
e2e/django5_fixture/caveats/: models.py
e2e/django5_fixture/commerce/: models.py
e2e/django5_fixture/config/: settings.py
e2e/django5_fixture/typechecks/: negative.py  positive.py  static_api.py
e2e/fixture/: check_plugin.py  positive_check.py  ty.toml
e2e/fixture/.ty/plugins/: django-ty.plugin.json
e2e/fixture/django/conf/: __init__.py
e2e/fixture/django/db/models/: __init__.py  manager.py  query.py
python/django_ty/: __init__.py
python/django_ty/stubs/django/conf/: global_settings.pyi
scripts/: build-wheel.sh  compatibility_value.py  differential-conformance.sh  e2e.sh  evaluate_differential_conformance.py  evaluate_django_stubs_coverage.py  vendor_django_static_api.py
src/: constants.rs  diagnostics.rs  fields.rs  index.rs  lib.rs  plugin.rs  querysets.rs  settings.rs  types.rs
tests/: plugin.rs  test_compatibility_value.py  test_evaluate_differential_conformance.py
